--- a/src/Components/CalendarApp.css
+++ b/src/Components/CalendarApp.css
@@ -129,7 +129,6 @@
     justify-content: center;
     align-items: center;
     row-gap: 2rem;
-    display: none;
 }
 
 .time-input{
@@ -244,7 +243,7 @@
     border-right: 0.1rem solid rgba(255, 255, 255, 0.5);
 }
 
-.evetn-date {
+.event-date {
     font-size: clamp(1rem, 1cqi, 1.2rem);
     color: #ddd;
 }
